<resources>
    <string name="app_name">CloudinaryExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thumb_1">Thumb 1</string>
    <string name="thumb_2">Thumb 2</string>
    <string name="thumb_3">Thumb 3</string>
    <string name="full_1">Full 1</string>
    <string name="full_2">Full 2</string>
    <string name="full_3">Full 3</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
</resources>
